--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,13 +7,17 @@ export(cov.plot)
 export(cpi)
 export(cpi.plot)
 export(crps)
+export(dm.test)
 export(ds)
 export(dss)
 export(ee)
+export(ent)
 export(es)
 export(line.plot)
 export(logs)
+export(m.pit)
 export(map.plot)
+export(ment)
 export(mri)
 export(mrnk)
 export(mvr.hist)
@@ -61,6 +65,9 @@ importFrom(ggplot2,theme)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(pcaPP,l1median_VaZh)
+importFrom(stats,acf)
+importFrom(stats,complete.cases)
 importFrom(stats,median)
+importFrom(stats,pnorm)
 importFrom(stats,setNames)
 importFrom(stats,var)
