--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,19 @@
 Package: eppverification
 Type: Package
 Title: Verification Tools for the Statistical Postprocessing of Ensemble Forecasts 
-Version: 0.1.0
-Author: David Jobst
+Version: 0.2.0
+Authors@R: c(
+    person(given = "David",
+           family = "Jobst",
+           role = c("aut", "cre"),
+           email = "jobst@imai.uni-hildesheim.de",
+           comment = c(DOI = "10.5281/zenodo.5574572")))
 Maintainer: David Jobst <jobst@imai.uni-hildesheim.de>
 Description: This package provides user-friendly univariate and multivariate verification tools for the statistical ensemble post-processing. It allows to score and assess the calibration (reliability) and sharpness of ensemble forecasts and predictive distributions. In addition this package can be used to create useful contemporary visualizations for verification.
+URL: https://github.com/jobstdavid/eppverification
+BugReports: https://github.com/jobstdavid/eppverification/issues
 Imports: ggplot2, ggmap, emstreeR, pcaPP
-License: GPL (>= 3)
+License: GPL (>= 3) + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
