--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,7 +31,7 @@ export(se)
 export(var.pit)
 export(vr.hist)
 export(vs)
-importFrom(emstreeR,ComputeMST)
+importFrom(fields,rdist)
 importFrom(ggmap,calc_zoom)
 importFrom(ggmap,get_stamenmap)
 importFrom(ggmap,ggmap)
@@ -71,3 +71,4 @@ importFrom(stats,median)
 importFrom(stats,pnorm)
 importFrom(stats,setNames)
 importFrom(stats,var)
+importFrom(vegan,spantree)
