--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,20 @@
 
 export(ae)
 export(bh.test)
+export(bias)
 export(bs)
 export(cov.plot)
 export(cpi)
 export(cpi.plot)
 export(crps)
+export(dispersion)
 export(dm.test)
 export(ds)
 export(dss)
 export(ee)
 export(ent)
 export(es)
-export(line.plot)
 export(logs)
-export(m.pit)
 export(ment)
 export(mri)
 export(mrnk)
@@ -28,7 +28,6 @@ export(rnk)
 export(score.plot)
 export(se)
 export(ss)
-export(var.pit)
 export(vr.hist)
 export(vs)
 importFrom(Rcpp,sourceCpp)
@@ -38,7 +37,6 @@ importFrom(Rfast,rowMedians)
 importFrom(Rfast,rowVars)
 importFrom(Rfast,rowmeans)
 importFrom(Rfast,rowsums)
-importFrom(fields,rdist)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,element_text)
@@ -55,7 +53,6 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
 importFrom(ggplot2,scale_fill_gradient)
-importFrom(ggplot2,scale_linetype_manual)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_x_discrete)
 importFrom(ggplot2,scale_y_continuous)
@@ -69,8 +66,9 @@ importFrom(stats,acf)
 importFrom(stats,complete.cases)
 importFrom(stats,median)
 importFrom(stats,na.omit)
-importFrom(stats,pt)
+importFrom(stats,pnorm)
 importFrom(stats,setNames)
 importFrom(stats,var)
+importFrom(utils,tail)
 importFrom(vegan,spantree)
 useDynLib(eppverification, .registration = TRUE)
